--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+pip==20.2.2
+setuptools==49.6.0
 imgaug==0.4.0
 matplotlib==3.3.1
 numpy==1.19.1
 opencv-python==4.4.0.42
 Pillow==7.2.0
-torch==1.5.1+cu101
-torchvision==0.6.1+cu101
+torch==1.6.0
+torchvision>=0.7.0
+
